backup/networkpolicy.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    creationTimestamp: "2024-03-20T12:54:02Z"
    generation: 6
    name: default-deny-ingress
    namespace: default
    resourceVersion: "16878"
    uid: b3984287-d788-4d82-9381-ca33cb7e6dc2
  spec:
    ingress:
    - from:
      - podSelector: {}
      ports:
      - port: 80
        protocol: TCP
    podSelector: {}
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
